A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5606] removed 'units' and 'store value' fields for character data items (Vedmak)
..F....... [ZBX-5608] fixed incorrect macro resolving in trigger descriptions if expression has duplicate functions (Vedmak)
.D........ [ZBX-5650] added more information about ProxyLocalBuffer parameter in the example configuration file (Richlv)
.......PS. [ZBX-5414] fixed handling of an incorrect username/password of SNMPv3 checks (Sasha)
...G...... [ZBX-5609] fixed defaults for parameters of vfs.dev.read/write items in "zabbix_agentd -p" (Sasha)
...G...... [ZBX-5552] fixed processing of vm.memory.size[total] under FreeBSD (Sasha)
.......PS. [ZBX-5572] fixed trivial compilation warnings (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.3

2.0.3rc2 was released as 2.0.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.3rc2

Bug fixes:
.......PS. [ZBX-5625] fixed resolving of host and template-level macros in SNMP OID field (Sasha)
..F....... [ZBX-5627] fixed missed placeholder brackets in multiple pages (Eduard, Pavels)
..F....... [ZBX-5578] fixed multiple IE issues in screens (Eduard)
..F....... [ZBX-5612] fixed inability to view item data overview when host group doesn't have any triggers (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)