@@ -1,4 +1,24 @@
 <?php
+/*
+** Zabbix
+** Copyright (C) 2000-2012 Zabbix SIA
+**
+** This program is free software; you can redistribute it and/or modify
+** it under the terms of the GNU General Public License as published by
+** the Free Software Foundation; either version 2 of the License, or
+** (at your option) any later version.
+**
+** This program is distributed in the hope that it will be useful,
+** but WITHOUT ANY WARRANTY; without even the implied warranty of
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** GNU General Public License for more details.
+**
+** You should have received a copy of the GNU General Public License
+** along with this program; if not, write to the Free Software
+** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+**/
+
+
 class CTriggerExpression {
 	public $errors;
 	public $data;
@@ -257,7 +277,7 @@ class CTriggerExpression {
 				$this->expressions[$enum]['functionParam'] = $this->expressions[$enum]['functionParamReal'];
 				unset($this->expressions[$enum]['functionParamReal']);
 			}
-			$expression = str_replace($expr['expression'], '{constant}', $expression);
+			$expression = str_replace_first($expr['expression'], '{constant}', $expression);
 		}
 
 		if (empty($this->data['hosts']) || empty($this->data['items'])) {
@@ -771,4 +791,3 @@ class CTriggerExpression {
 		);
 	}
 }
-?>
